# KnotenCore

./: .gitignore  AETHER_SPEC.md  AGENT_EXTENSION_MANUAL.md  Cargo.toml  README.md  audit.md  changelog.md  llm.md  text_editor.aec
.github/workflows/: release.yml
assets/: mesh3d.wgsl
docs/: AUDIT.md  KNOTEN_SPEC.md  RUST_INGEST.md  STDLIB.md  aether_schema.json
examples/agent/: agent_fetch.nod
examples/bench/: heavy_load.nod
examples/core/: arc_test.nod  calculator.nod  rust_bridge_test.nod  self_host.nod  stdlib_demo.aec  tiny_test_loop.nod  tiny_test_vars.nod  visual_handle.nod
examples/data/: map_drop.nod
examples/graphics/: 3d_cube.nod  calculator_pro.nod  chess_board.nod  chess_showcase.nod  doom_mvp.nod  hallway_flex.nod  voxel_genesis.nod
examples/io_test/: main.aec
examples/module_test/: main.json  math_lib.json
examples/showcase_chess/: Cargo.toml
examples/showcase_chess/.knoten_data/storage/: chess_board.json
examples/showcase_chess/src/: main.rs
examples/voxel/: aethercraft.json  showcase_world.json
src/: ast.rs  async_bridge.rs  bootstrap_gen.rs  evaluator.rs  executor.rs  lib.rs  llvm_codegen.rs  optimizer.rs  parser.rs  renderer.rs  validator.rs  vm.rs  voxel.wgsl  window.rs
src/compiler/: codegen.rs
src/natives/: bridge.rs  fs.rs  mod.rs  registry.rs  ui.rs
stdlib/: fs.nod  registry.nod  string_utils.nod  ui.nod
tests/: integration_tests.rs  suite.rs
tmp/: bench_ast.knoten
