[package]
name = "aether_compiler"
version = "0.1.0"
edition = "2024"



[[bin]]
name = "run_aec"
path = "src/bin/run_aec.rs"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
cpal = "0.17.3"
pollster = "0.4.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
wgpu = "23.0.0"
winit = "0.29"
tobj = "4.0.2"
image = "0.25.1"
hound = "3.5.1"
wgpu_glyph = "0.23.0"
serde_json = "1.0.149"
